# mregn

./: Makefile  Makefile.am  README  autogen.sh  configure.ac
examples/sample1/: start.sh
rnn/src/unit-test/: config.h
src/: Makefile  Makefile.am
src/common/: mre.c  mre.h  mre_lyapunov.c  mre_lyapunov.h  mre_runner.c  mre_runner.h  mregn.c  mregn.h  mregn_lyapunov.c  mregn_lyapunov.h  mregn_runner.c  mregn_runner.h
src/gn-learn/: Makefile  Makefile.am  main.c  main.h  parameter.h  print.c  print.h  training.c  training.h
src/join-test/: make-all.sh
src/mre-learn/: Makefile  Makefile.am  main.c  main.h  parameter.h  print.c  print.h  training.c
src/mregn-generate/: Makefile  Makefile.am  main.c  main.h
src/mregn-lyapunov/: Makefile  Makefile.am  lyapunov.c  lyapunov.h  main.c
src/python/: Makefile  Makefile.am  mregn-generate-with-file  mregn-kl-div  mregn-plot-log  mregn-print-log  mregn_generate_with_file.py  mregn_kl_div.py  mregn_plot_log.py  mregn_print_log.py  mregn_runner.py  plot-log  plot_mregn_log.py  print-log  print_mregn_log.py
src/unit-test/: Makefile  Makefile.am  main.c  test_mre.c  test_mre.h  test_mre_lyapunov.c  test_mre_lyapunov.h  test_mre_runner.c  test_mre_runner.h  test_mregn.c  test_mregn.h  test_mregn_lyapunov.c  test_mregn_lyapunov.h  test_mregn_runner.c  test_mregn_runner.h
